<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:id="@+id/mainLayout"
     android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/videoView_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/videoView_go_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back" />

        <TextView
            android:id="@+id/videoView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="Title"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/videoView_more"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_two_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/videoView_four_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView_one_layout">


        <ImageView
            android:layout_gravity="center"
            android:id="@+id/videoView_brightness_image"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_20sdp"

            android:layout_marginBottom="7dp"
            android:src="@drawable/ic_baseline_highlight_24" />

        <SeekBar
            android:id="@+id/videoView_brightness"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginLeft="-50dp"
            android:layout_weight="1"
            android:max="255"
            android:progress="150"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/teal_200"
            android:rotation="270"
            android:scaleY="3"
            android:thumb="@null"/>
            tools:targetApi="lollipop"

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/videoView_six_layout"
    android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@+id/videoView_four_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView_one_layout">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginBottom="7dp"
            android:src="@drawable/ic_baseline_volume" />

        <SeekBar
            android:id="@+id/videoView_volume"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-50dp"
            android:layout_marginRight="-50dp"
            android:layout_weight="1"
            android:max="255"
            android:progress="150"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/teal_200"
            android:rotation="270"
            android:scaleY="3"
            android:thumb="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_three_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />

        <ImageButton
            android:id="@+id/videoView_rewind"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_fast_rewind_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_play_pause_btn"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_pause_circle_outline_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_forward"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_fast_forward_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_four_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/videoView_four_one_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <SeekBar
                android:id="@+id/videoView_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/teal_700"
                android:thumb="@drawable/custom_thumb"/>
<!--                tools:targetApi="lollipop"-->

            <TextView
                android:id="@+id/videoView_endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/_00_00_00"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/videoView_four_two_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <LinearLayout
                android:id="@+id/videoView_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_6sdp"
                android:theme="@style/MyRipple">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_lock_open_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/lock"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/videoView_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:theme="@style/MyRipple">


<!--                <ImageView-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:layout_marginRight="5dp"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:src="@drawable/netflix_audio_subtitles" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/audio_sub"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/videoView_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:theme="@style/MyRipple">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_rotate_90_degrees_ccw_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/rotate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_five_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        <LinearLayout-->
<!--            android:id="@+id/video_unlock_layout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/white_round"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="14dp">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="5dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:src="@drawable/ic_baseline_lock_24" />-->

<!--            <TextView-->

<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/unlock_controls"-->
<!--                android:textColor="@color/black"-->
<!--                android:textStyle="bold" />-->


<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/videoView_lock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/screen_locked"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/videoView_lock_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_unlock"
            android:textColor="@color/lightWhite"
            android:textSize="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
